Fix hover, add dropshadow, fix intro scrollbar

--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -33,6 +33,7 @@ button, input[type=button] {
 
 			&:hover {
 				background: linear-gradient(90deg, @gradient-primary 0%, @gradient-secondary 100%);
+				color: white;
 				
 				span {
 					color: white;
