--- a/src/components/popup/intro/intro.less
+++ b/src/components/popup/intro/intro.less
@@ -2,10 +2,10 @@
 
 div.intro {
 	display: block;
-	margin: 0px 20px;
+	margin: 0px 30px;
 	max-height: 100%;
 	max-width: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	color: @color-textLight;
 	font-weight: 400;
 
@@ -36,7 +36,7 @@ div.intro {
 			font-size: 32px;
 			font-weight: bold;
 			letter-spacing: 0.2px;
-			line-height: 20px;
+			line-height: 36px;
 			color: @color-titleColor;
 			text-align: center;
 		}
