--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -38,6 +38,11 @@
 .simple {
 	width: 700px;
 	height: 500px;
+
+	//Dropshadow
+	-webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.1);
+	box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.1);
 	
 	@media @smartphone {
 		width: 98%;
